docs: fix logo position on mobile in dark mode

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -56,6 +56,11 @@
   background-color: rgba(70, 203, 174, 0.5);
 }
 
+.navbar .navbar__logo {
+  max-height: 100%;
+  height: auto;
+}
+
 .navbar .navbar__link[href*=github],
 .navbar .navbar__link[href*=slack] {
   font-size: 0;
@@ -120,7 +125,7 @@ a[href*=edit] {
 html[data-theme="dark"] .navbar .navbar__brand {
   background-image: url('/img/logo-dark.svg');
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: left center;
   background-size: contain;
 }
 
